# tally-clob

./: .env  Anchor.toml  README.md  authorized_user.json  buffer.json  clob-manager.json  config.toml  fee-manager.json  mvp.json  package.json  tally-clob-2.json  tally-clob-3.json  tally-clob-4.json  tally-clob-5.json  tally-clob-6.json  tally-clob-7.json  tally-clob-8.json  tally-clob.json  user.json  wallet-manager.json  wallet_list.txt
app/: test.ts  utils.ts
programs/tally-clob/: Cargo.toml
programs/tally-clob/src/: errors.rs  lib.rs
programs/tally-clob/src/instructions/: add_to_balance.rs  add_to_unreedeemable.rs  authorize_user.rs  bulk_buy_by_price.rs  bulk_buy_by_shares.rs  bulk_sell_by_price.rs  bulk_sell_by_shares.rs  buy_choice_by_shares.rs  claim_winnings.rs  fair_launch_order.rs  init_market.rs  init_wallet.rs  mod.rs  resolve_market.rs  sell_choice_by_shares.rs  start_trading.rs  withdraw_from_balance.rs
programs/tally-clob/src/state/: authorized_user.rs  choice_market.rs  choice_portfolio.rs  market.rs  market_portfolio.rs  mod.rs  sub_market.rs  sub_market_portfolio.rs  type_size.rs  user.rs
programs/tally-clob/src/utils/: checks.rs  clock.rs  math.rs  mod.rs
tests/: authorizeUser.ts  e2e.ts  initMarket.ts  initWallet.ts  tally-clob.ts  wallet.ts
tests/market/: fairLaunch.ts  initMarket.ts  resolved.ts  trading.ts
tests/utils/: extra-cpu.ts  getWallets.ts  pdas.ts  price_estimation.ts  program.ts  wallets.ts  wrappers.ts
