[package]
name = "tally-clob"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tally_clob"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "= 1.17.2"
anchor-lang = {version = "0.29.0", features = ["init-if-needed"]}
anchor-spl = "0.29.0"
spl-token = "4.0.0"
ahash = "=0.8.4"
spl-math = { version="0.2.0", features = [ "no-entrypoint" ] }
